feat: 🎸 add commitizen support and eslint react settings

--- a/package.json
+++ b/package.json
@@ -43,12 +43,16 @@
   },
   "husky": {
     "hooks": {
-      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS",
+      "pre-commit": "yarn prettify && yarn lint"
     }
   },
   "config": {
     "commitizen": {
       "path": "./node_modules/cz-conventional-changelog"
     }
+  },
+  "peerDependencies": {
+    "react": "^16.8.6"
   }
 }
