--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "commit": "git-cz",
     "build": "rollup -c",
+    "build:watch": "rollup -c -w",
     "prebuild": "rimraf dist"
   },
   "repository": {
