--- a/package.json
+++ b/package.json
@@ -66,7 +66,7 @@
   "husky": {
     "hooks": {
       "commit-msg": "commitlint -E HUSKY_GIT_PARAMS",
-      "pre-commit": "yarn prettify && yarn lint"
+      "pre-commit": "yarn prettify && yarn lint && test"
     }
   },
   "config": {
