feat: 🎸 add coverall support with travis CI

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
+    "test:coveralls": "jest --coverage --coverageReporters=text-lcov | coveralls",
     "commit": "git-cz",
     "build": "rollup -c",
     "build:watch": "rollup -c -w",
@@ -42,6 +43,7 @@
     "@commitlint/config-conventional": "^8.1.0",
     "babel-jest": "^24.8.0",
     "commitizen": "^4.0.3",
+    "coveralls": "^3.0.5",
     "cz-conventional-changelog": "3.0.2",
     "eslint": "^6.1.0",
     "eslint-config-prettier": "^6.0.0",
